--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ajv": "^7.0.3",
+    "ajv-errors": "^2.0.0",
+    "ajv-i18n": "^3.6.0",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "jss": "^10.5.0",
+    "jss-preset-default": "^10.5.0",
+    "vue": "^3.0.0",
+    "vue-jss": "^0.0.4"
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
+    "@vue/babel-plugin-jsx": "^1.0.2",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
@@ -29,6 +36,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^7.0.0-0",
     "lint-staged": "^9.5.0",
+    "monaco-editor": "^0.21.3",
     "prettier": "^1.19.1",
     "typescript": "~3.9.3",
     "vue-jest": "^5.0.0-0"
