--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build:github.io": "rimraf dist && TYPE=github.io vue-cli-service build",
+    "build:core": "vue-cli-service build --target lib --name index --type lib --no-clean lib/index.ts",
+    "build:theme": "vue-cli-service build --target lib --name theme-default/index --type lib --no-clean lib/theme-default/index.tsx",
+    "build": "rimraf dist && npm run build:core && npm run build:theme",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
   },
@@ -45,6 +48,7 @@
     "monaco-editor": "^0.21.3",
     "monaco-editor-webpack-plugin": "^2.1.0",
     "prettier": "^1.19.1",
+    "rimraf": "^3.0.2",
     "typescript": "~3.9.3",
     "vue-jest": "^5.0.0-0"
   },
